# 4anime-scraper

./: CMakeLists.txt  README.md  main.cpp
